STL_FLAGS = -I$(top_srcdir)/include/m_stl # libstdc++/gcc
#STL_FLAGS = -I$(top_srcdir)/include/stlport -DUSE_STLPORT # STLPORT
# don't forget to make clean before re-building the tool with different STL impl

include $(top_srcdir)/Makefile.tool.am

noinst_PROGRAMS  = tdheap2-@VGCONF_ARCH_PRI@-@VGCONF_OS@
if VGCONF_HAVE_PLATFORM_SEC
noinst_PROGRAMS += tdheap2-@VGCONF_ARCH_SEC@-@VGCONF_OS@
endif

tdheap2_SOURCES_COMMON = t2_main.cc

tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = $(tdheap2_SOURCES_COMMON)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) $(STL_FLAGS)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS       = \
	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_DEPENDENCIES = \
	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_PRI_CAPS@)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDADD        = \
	$(TOOL_LDADD_@VGCONF_PLATFORM_PRI_CAPS@)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDFLAGS      = \
	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
tdheap2_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CXXFLAGS     = \
	$(AM_CXXFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
if VGCONF_HAVE_PLATFORM_SEC
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_SOURCES      = $(tdheap2_SOURCES_COMMON)
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CPPFLAGS     = \
	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) $(STL_FLAGS) 
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS       = \
	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_DEPENDENCIES = \
	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_SEC_CAPS@)
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDADD        = \
	$(TOOL_LDADD_@VGCONF_PLATFORM_SEC_CAPS@)
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_LDFLAGS      = \
	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
tdheap2_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CXXFLAGS     = \
	$(AM_CXXFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
endif
